# video-editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  options_window.cpp  options_window.h  run.ps1  vcpkg.json  vcpkg.json.ci  video_player.cpp  video_player.h
.circleci/: config.yml
src/: audio_mixer.cpp  audio_mixer.h  audio_player.cpp  audio_player.h  b2_upload.cpp  b2_upload.h  catbox_upload.cpp  catbox_upload.h  debug_log.cpp  debug_log.h  editing.cpp  editing.h  file_handling.cpp  file_handling.h  main.cpp  noise_reducer.cpp  noise_reducer.h  options_window.cpp  options_window.h  progress_window.cpp  progress_window.h  timeline.cpp  timeline.h  ui_controls.cpp  ui_controls.h  ui_updates.cpp  ui_updates.h  upload_dialog.cpp  upload_dialog.h  utils.cpp  utils.h  video_cutter.cpp  video_cutter.h  video_decoder.cpp  video_decoder.h  video_player.cpp  video_player.h  video_renderer.cpp  video_renderer.h  window_proc.cpp  (+1 more)
